--- a/Views/User/checkout.ejs
+++ b/Views/User/checkout.ejs
@@ -27,82 +27,37 @@
         ></button>
       </div>
       <div class="modal-body">
-        <form action="/addAddress-Checkout" method="post">
-          <div class="mb-3">
-            <label for="fullName" class="form-label">Full Name</label>
-            <input
-              type="text"
-              class="form-control"
-              name="Name"
-              id="fullName"
-              placeholder="Enter your full name"
-              required
-            />
-          </div>
-          <div class="mb-3">
-            <label for="address" class="form-label">Address</label>
-            <input
-              type="text"
-              class="form-control"
-              name="Address"
-              id="address"
-              placeholder="Enter your address"
-              required
-            />
-          </div>
-          <div class="mb-3">
-            <label for="city" class="form-label">City</label>
-            <input
-              type="text"
-              class="form-control"
-              id="city"
-              name="City"
-              placeholder="Enter your city"
-              required
-            />
-          </div>
-          <div class="mb-3">
-            <label for="pincode" class="form-label">Pincode</label>
-            <input
-              type="text"
-              class="form-control"
-              id="pincode"
-              name="Pincode"
-              placeholder="Enter your pincode"
-              required
-            />
-          </div>
-          <div class="mb-3">
-            <label for="state" class="form-label">State</label>
-            <input
-              type="text"
-              class="form-control"
-              id="state"
-              name="State"
-              placeholder="Enter your state"
-              required
-            />
-          </div>
-          <div class="mb-3">
-            <label for="mobileNumber" class="form-label">Mobile Number</label>
-            <input
-              type="tel"
-              class="form-control"
-              id="mobileNumber"
-              name="Mobile"
-              placeholder="Enter your mobile number"
-              required
-            />
-          </div>
-          <button type="submit" class="btn btn-primary">Submit</button>
+        <form action="/user/addAddress-Checkout" method="post">
+            <div class="mb-3">
+                <label for="fullName" class="form-label">Full Name</label>
+                <input type="text" class="form-control" name="name" id="fullName" placeholder="Enter your full name" required />
+            </div>
+            <div class="mb-3">
+                <label for="address" class="form-label">Address</label>
+                <input type="text" class="form-control" name="address" id="address" placeholder="Enter your address" required />
+            </div>
+            <div class="mb-3">
+                <label for="city" class="form-label">City</label>
+                <input type="text" class="form-control" id="city" name="city" placeholder="Enter your city" required />
+            </div>
+            <div class="mb-3">
+                <label for="pincode" class="form-label">Pincode</label>
+                <input type="text" class="form-control" id="pincode" name="pincode" placeholder="Enter your pincode" required />
+            </div>
+            <div class="mb-3">
+                <label for="state" class="form-label">State</label>
+                <input type="text" class="form-control" id="state" name="state" placeholder="Enter your state" required />
+            </div>
+            <div class="mb-3">
+                <label for="mobileNumber" class="form-label">Mobile Number</label>
+                <input type="tel" class="form-control" id="mobileNumber" name="mobile" placeholder="Enter your mobile number" required />
+            </div>
+            <button type="submit" class="btn btn-dark" style="background-color: black;">Submit</button>
         </form>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
-          Close
-        </button>
-        <button type="button" class="btn btn-primary">Save Address</button>
-      </div>
+    </div>
+    <div class="modal-footer">
+        <button style="background-color: black;" type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+    </div>
     </div>
   </div>
 </div>
@@ -130,7 +85,7 @@
               </div>
               <div class="col-5">
                 <div class="address-line">Name:</div>
-                <div class="address-line">Address:</div>
+                <div class="address-line">Address:</div><br>
                 <div class="address-line">City:</div>
                 <div class="address-line">Pincode:</div>
                 <div class="address-line">State:</div>
@@ -138,7 +93,7 @@
               </div>
               <div class="col-6">
                 <div class="address-value"><%=Address.name%></div>
-                <div class="address-value"><%=Address.address%></div>
+                <div class="address-value"><%=Address.address%></div><br>
                 <div class="address-value"><%=Address.city%></div>
                 <div class="address-value"><%=Address.pincode%></div>
                 <div class="address-value"><%=Address.state%></div>
