--- a/Views/User/product-detail_expire.ejs
+++ b/Views/User/product-detail_expire.ejs
@@ -3,9 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <%-include('../layout/header_links')-%>
     <link rel="stylesheet" href="/static/css/details.css">
 </head>
 </head>
