--- a/Views/partials/footer.ejs
+++ b/Views/partials/footer.ejs
@@ -1,4 +1,4 @@
-<div>
+<footer >
     <div class="footer-area">
         <div class="container">
             <div class="row">
@@ -62,4 +62,4 @@
             </div>
         </div>
     </div>
-</div>
+</footer>
