--- a/Views/User/products.ejs
+++ b/Views/User/products.ejs
@@ -5,15 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>hello</title>
     <link rel="stylesheet" href="/static/css/product.css" />
-    <link rel="stylesheet" href="/static/css/header.css" />
-    <link rel="stylesheet" href="/static/css/footer.css" />
-
-    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-
-  </head>
-  <body id="body">
+    <%-include('../layout/header_links')-%>
+</head>
+<body id="body">
     <%-include('../partials/header')-%>
   <br><br>
 <!-- sidebar + content -->
