--- a/Views/partials/header.ejs
+++ b/Views/partials/header.ejs
@@ -1,10 +1,13 @@
-  <div class="main-navbar shadow-sm sticky-top">
+<div class="main-navbar shadow-sm sticky-top">
     <div class="top-navbar">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-2 my-auto d-none d-sm-none d-md-block d-lg-block">
- 
-    <h5 class="brand-name">Treasure <span style="background-color: #f0f0f0;color: #020A20;border-radius: 3px;padding-left: 1px;padding-right: 1px;">Cart</span></h5>
+                    
+
+                    <h5 class="brand-name">Treasure <span
+                            style="background-color: #f0f0f0;color: #020A20;border-radius: 3px;padding-left: 1px;padding-right: 1px;">Cart</span>
+                    </h5>
                 </div>
                 <div class=" col-4 col-sm-6 col-md-5 my-auto">
                     <form role="search">
@@ -18,7 +21,7 @@
                 </div>
                 <div class="col-8 col-sm-6 col-md-5 my-auto">
                     <ul class="nav justify-content-end">
-                        
+
                         <li class="nav-item">
                             <a class="nav-link" href="/cart">
                                 <i class="fa fa-shopping-cart"></i>
@@ -29,15 +32,26 @@
                                 <i class="fa fa-heart"></i>
                             </a>
                         </li>
+                        
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                <i class="fa fa-user"></i> <%=user?user:"User"%> 
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">
+                                <i class="fa fa-user"></i>
+                                <%=user?user:"Login"%>
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="/profile"><i class="fa fa-user"></i> My Account</a></li>
-                            <li><a class="dropdown-item" href="/order-history"><i class="fa-solid fa-truck-fast"></i>   MyOrders</a></li>
-                            <li><a class="dropdown-item" href="/logout"><i class="fa fa-sign-out"></i> Logout</a></li>
+                            <%if(user){%>
 
+                                <li><a class="dropdown-item" href="/profile"><i class="fa fa-user"></i> My Account</a>
+                                </li>
+                                <li><a class="dropdown-item" href="/order-history"><i
+                                            class="fa-solid fa-truck-fast"></i> MyOrders</a></li>
+                                <li><a class="dropdown-item" href="/logout"><i class="fa fa-sign-out"></i> Logout</a>
+                                </li>
+<%}else{%>
+    <li><a class="dropdown-item" href="/login"><i class="fa fa-sign-in"></i> Login</a>
+    </li>
+    <%}%>
                             </ul>
                         </li>
                     </ul>
@@ -48,9 +62,12 @@
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
             <a class="navbar-brand d-block d-sm-block d-md-none d-lg-none" href="#">
-              <h5 class="brand-name">Treasure <span>Cart</span></h5>
+                <span onclick="openNav()"><iconify-icon icon="ic:round-menu" style="color: white;float: left;" width="40" height="40"></iconify-icon></span>
+                <h5 class="brand-name">Treasure <span>Cart</span></h5>
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
