--- a/Public/css/admin-head.css
+++ b/Public/css/admin-head.css
@@ -38,10 +38,10 @@ body {
   }
 
   
-  /* @media screen and (max-height: 450px) {
+  @media screen and (max-height: 450px) {
     .sidenav {padding-top: 15px;}
     .sidenav a {font-size: 18px;}
-  } */
+  }
 
 
   .nav-main{
