--- a/Public/css/product.css
+++ b/Public/css/product.css
@@ -1,8 +1,8 @@
-#body {
+/* #body {
   background-color: #e3e6e6;
-}
+} */
 /* Product Card */
-.product-card{
+/* .product-card{
   background-color: #fff;
   border: 1px solid #ccc;
   margin-bottom: 24px;
@@ -64,5 +64,5 @@
   border-radius: 0px;
   font-size: 12px;
   margin-top: 10px;
-}
+} */
 /* Product Card End */
