--- a/Views/partials/header.ejs
+++ b/Views/partials/header.ejs
@@ -1,3 +1,14 @@
+<div id="mySidenav" class="sidenav">
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+    <a href="/" class="d-flex align-items-center"><iconify-icon icon="solar:home-bold" style="color: #787878;" width="25" height="25"></iconify-icon><span class="mx-2">Home</span></a>
+    <a href="/products" class="d-flex align-items-center"><iconify-icon icon="vaadin:shop" style="color: #787878;" width="25" height="25"></iconify-icon><span class="mx-2">Shop</span></a>
+    <a href="/wishlist" class="d-flex align-items-center"><iconify-icon icon="mdi:heart" style="color: #787878;" width="25" height="25"></iconify-icon><span class="mx-2">Wish List</span></a>
+    <a href="/profile" class="d-flex align-items-center"><iconify-icon icon="ic:baseline-person" style="color: #787878;" width="25" height="25"></iconify-icon><span class="mx-2">My Account</span></a>
+    <a href="/order-history" class="d-flex align-items-center"><iconify-icon icon="fa-solid:shipping-fast" style="color: #787878;" width="25" height="25"></iconify-icon><span class="mx-2">My Account</span></a>
+
+    <a href="/contact-us" class="d-flex align-items-center"><iconify-icon icon="bx:support" style="color: #787878;" width="25" height="25"></iconify-icon><span class="mx-2">Contact Us</span></a>
+</div>
+
 <div class="main-navbar shadow-sm sticky-top">
     <div class="top-navbar">
         <div class="container-fluid">
@@ -62,21 +73,21 @@
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
             <a class="navbar-brand d-block d-sm-block d-md-none d-lg-none" href="#">
-                <span onclick="openNav()"><iconify-icon icon="ic:round-menu" style="color: white;float: left;" width="40" height="40"></iconify-icon></span>
-                <h5 class="brand-name">Treasure <span>Cart</span></h5>
+                <span onclick="openNav()"><iconify-icon icon="ic:round-menu" style="color: #020A20;float: left; margin-right: 20px;" width="40" height="40"></iconify-icon></span>
+                <h5 class="brand-name mt-2 ms-2 ">Treasure <span style="background-color: #020A20;color: #fff;padding: 3px;border-radius: 3px;">Cart</span></h5>
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+            <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
-            </button>
+            </button> -->
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
                         <a class="nav-link" href="/">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/products">Explore</a>
+                        <a class="nav-link" href="/products">Shop</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/wishlist">Wish List</a>
@@ -92,3 +103,13 @@
         </div>
     </nav>
 </div>
+
+<script>
+    function openNav() {
+  document.getElementById("mySidenav").style.display = "block";
+}
+
+function closeNav() {
+  document.getElementById("mySidenav").style.display = "none";
+}
+</script>
