--- a/Public/css/admin-dash.css
+++ b/Public/css/admin-dash.css
@@ -28,3 +28,10 @@
   a{
     text-decoration: none;
   }
+  .table-data1{
+    height: 45px;
+    width: 100%;
+    display: flex;
+    /* justify-content: center; */
+    align-items: center;
+  }
