--- a/Views/Admin/Admin-dash.ejs
+++ b/Views/Admin/Admin-dash.ejs
@@ -71,7 +71,7 @@
                 <div class="card-body">
                   <div class="row">
                     <div class="dropdown">
-                      <button class="btn btn-secondary dropdown-toggle" type="button" id="timeIntervalDropdown"
+                      <button class="btn btn-primary  dropdown-toggle" type="button" id="timeIntervalDropdown"
                         data-bs-toggle="dropdown" aria-expanded="false">
                         By Day
                       </button>
@@ -96,7 +96,7 @@
                 <div class="card-header d-flex justify-content-between ">
 
                   <h2 class="">Latest Orders</h2>
-                <a href="">show more></a>
+                <a href="/admin/orders">show more></a>
                 </div>
                 <div class="card-body ">
                   <div class="table-responsive">
@@ -123,10 +123,28 @@
                                                 hour: '2-digit' , minute: '2-digit' }) %></td>
                               <td><%=data.totalPrice%></td>
                               <td>
-                                <%%>
-                                <%=data.paymentStatus%>
+                                <%if(data.paymentStatus==="Paid"){%>
+                                  <span class="bg-success text-white p-2 rounded-2 "><%=data.paymentStatus%></span>
+                                  <%}else{%>
+                                    <span class="bg-warning  text-white p-2 rounded-2 "><%=data.paymentStatus%></span>
+                                    <%}%>
+                                
                               </td>
-                              <td><%=data.status%></td>
+                              
+                              <td>
+                                <%if(data.status==="Order Placed"){%>
+                                  <span class="bg-primary text-white p-2 rounded-2 "><%=data.status%></span>
+                                <%}else if(data.status==="Cancelled"){%>
+                                  <span class="bg-warning  text-white p-2 rounded-2 "><%=data.status%></span>
+                                <%}else if(data.status==="Rejected"){%>
+                                  <span class="bg-danger   text-white p-2 rounded-2 "><%=data.status%></span>
+                                <%}else if(data.status==="Shipped"){%>
+                                  <span class="bg-info   text-white p-2 rounded-2 "><%=data.status%></span>
+                                <%}else if(data.status==="Delivered"){%>
+                                  <span class="bg-success text-white p-2 rounded-2 "><%=data.status%></span>
+                                <%}%>
+                                  
+                              </td>
     
                             </tr>
                             <%})%>
@@ -145,15 +163,24 @@
                     <table class="table table-borderless">
                       <thead>
                         <tr>
-                          <th>Product Image</th>
-                          <th>Product</th>
-                          <th>Product Name</th>
+                          <th>Position </th>
+                          <th>Product </th>
                           <th>Price</th>
-                          <th>Status</th>
                           <th>Sold</th>
                         </tr>
                       </thead>
                       <tbody id="bestSellersTable">
+                        <%if(bestSeller.length>0){%>
+                          
+                          <%bestSeller.forEach((data,i)=>{%>
+                        <tr>
+                          <td>#<%=++i%></td>
+                          <td><div class="table-data1"><img src="<%=data.productDetails.images[0].mainimage?'/static/product-images/'+data.productDetails.images[0].mainimage:'/static/images/img-bg.jpg'%>" style="height:44px;width: 44px; border-radius: 50%; margin-right: 10px;"><span style="font-family: 700;"><%=data.productDetails.name%></span></div> </td>
+                          <td><%=data.productDetails.descountedPrice%></td>
+                          <td><%=data.totalCount%></td>
+                        </tr>
+                        <%})%>
+                        <%}%>
                       </tbody>
                     </table>
                   </div>
