--- a/Views/User/product-detail.ejs
+++ b/Views/User/product-detail.ejs
@@ -119,13 +119,22 @@
                                 <%if(data.stock>0){%>
                                     <button onclick="addtoCart('<%= data._id %>')"  class="btn btn-primary shadow-0 text-white"> <i class="me-1 fa fa-shopping-cart"></i> Add
                                         to cart </button>
-                                    <a href="#" class="btn btn-light border border-secondary py-2 add-to-wishlist-button px-3"> <i
-                                            class="me-1 fa fa-heart <% if (wishlist.find(item => item.productId.equals(data._id))) { %>text-danger<% } %>"></i> Save to Wishlist </a>
+                                        
+                                        <a href="#!" class="btn btn-light  border px-2 pt-2 add-to-wishlist-button"
+                                        data-product-id="<%= data._id %>">
+                                        <i
+                                          class="fa fa-heart <% if (wishlist.find(item => item.productId.equals(data._id))) { %>text-danger<% } %>"></i> 
+                                          <span class="lablewish">Save to wishlist</span>
+                                      </a>
                                 <%}else{%>
                                     <button onclick="showalert()" class="btn btn-primary shadow-0 text-white"> <i class="me-1 fa fa-shopping-cart"></i> Add
                                         to cart </button>
-                                    <a href="#" class="btn btn-light border border-secondary py-2 icon-hover add-to-wishlist-button px-3"> <i
-                                            class="me-1 fa fa-heart fa-lg"></i> Save </a>
+                                        <a href="#!" class="btn btn-light  border px-2 pt-2 add-to-wishlist-button"
+                                        data-product-id="<%= data._id %>">
+                                        <i
+                                          class="fa fa-heart <% if (wishlist.find(item => item.productId.equals(data._id))) { %>text-danger<% } %>"></i> 
+                                          <span class="lablewish">Save to wishlist</span>
+                                      </a>
                                 <%}%>  
                                 <%}else{%>
                                     <button onclick="showwarning()"  class="btn btn-primary shadow-0 text-white"> <i class="me-1 fa fa-shopping-cart"></i> Add
